--- a/client/plain-js/index.html
+++ b/client/plain-js/index.html
@@ -3,17 +3,17 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 
-<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+<link rel="icon" type="image/svg+xml" href="https://delucis.github.io/bgio-effects/favicon.svg">
 
-<link rel="sitemap" href="/sitemap.xml">
+<link rel="sitemap" href="https://delucis.github.io/bgio-effects/sitemap.xml">
 
 <!-- Global CSS -->
-<link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css"><link rel="stylesheet" href="../../assets/notes.35384b9e.css">
+<link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css"><link rel="stylesheet" href="../../assets/config.88d68045.css">
 
 
 
 <!-- Scrollable a11y code helper -->
-<script type="module" src="/make-scrollable-code-focusable.js"></script>
+
 
 <!-- This is intentionally inlined to avoid FOUC -->
 <script>
@@ -58,7 +58,8 @@
 
 
 
-<script type="module" src="../../assets/plain-js.e2649370.js"></script>
+
+<script type="module" src="../../assets/plain-js.f8b28316.js"></script>
 
 
 
