deploy: 3693837279a0fc5a72ee23ddfd01960f6ac4c8ee

--- a/plugin/config/index.html
+++ b/plugin/config/index.html
@@ -8,7 +8,7 @@
 <link rel="sitemap" href="https://delucis.github.io/bgio-effects/sitemap.xml">
 
 <!-- Global CSS -->
-<link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css"><link rel="stylesheet" href="../../assets/notes.35384b9e.css">
+<link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css"><link rel="stylesheet" href="../../assets/sequencing.a29b924d.css">
 
 
 
@@ -59,7 +59,7 @@
 
 
 
-<script type="module" src="../../assets/config.600088e4.js"></script>
+<script type="module" src="../../assets/config.10895263.js"></script>
 
 
 
