--- a/client/notes/index.html
+++ b/client/notes/index.html
@@ -8,7 +8,7 @@
 <link rel="sitemap" href="https://delucis.github.io/bgio-effects/sitemap.xml">
 
 <!-- Global CSS -->
-<link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css"><link rel="stylesheet" href="../../assets/notes.35384b9e.css">
+<link rel="stylesheet" href="../../assets/sequencing.a29b924d.css"><link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css">
 
 
 
@@ -59,7 +59,7 @@
 
 
 
-<script type="module" src="../../assets/notes.a4e468b4.js"></script>
+<script type="module" src="../../assets/notes.760ca608.js"></script>
 
 
 
