--- a/client/notes/index.html
+++ b/client/notes/index.html
@@ -8,7 +8,7 @@
 <link rel="sitemap" href="https://delucis.github.io/bgio-effects/sitemap.xml">
 
 <!-- Global CSS -->
-<link rel="stylesheet" href="../../assets/sequencing.a29b924d.css"><link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css">
+<link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css"><link rel="stylesheet" href="../../assets/config.88d68045.css">
 
 
 
