deploy: 3fa77bb88bc79ce43bcc2d205175f70dbcc2cce9

--- a/client/notes/index.html
+++ b/client/notes/index.html
@@ -8,7 +8,7 @@
 <link rel="sitemap" href="https://delucis.github.io/bgio-effects/sitemap.xml">
 
 <!-- Global CSS -->
-<link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css"><link rel="stylesheet" href="../../assets/config.88d68045.css">
+<link rel="stylesheet" href="../../assets/plain-js.ef965aa3.css"><link rel="stylesheet" href="../../assets/index.ba238b3c.css"><link rel="stylesheet" href="../../assets/ThemeToggleButton.0b105b36.css">
 
 
 
@@ -31,7 +31,7 @@
 <link rel="canonical" href="https://delucis.github.io/bgio-effects/client/notes/">
 
 <!-- OpenGraph Tags -->
-<meta property="og:title" content="Notes • 📤 bgio-effects">
+<meta property="og:title" content="Client notes • 📤 bgio-effects">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://delucis.github.io/bgio-effects/client/notes/">
 <meta property="og:locale" content="en_US">
@@ -43,12 +43,12 @@
 <!-- Twitter Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="swithinbank">
-<meta name="twitter:title" content="Notes • 📤 bgio-effects">
+<meta name="twitter:title" content="Client notes • 📤 bgio-effects">
 <meta name="twitter:description" content="General notes about bgio-effects client usage.">
 <meta name="twitter:image" content="https://delucis.github.io/bgio-effects/default-og-image.jpg">
 <meta name="twitter:image:alt" content="the text “bgio-effects” glows over a swirl of blurry colours">
 
-		<title>Notes • 📤 bgio-effects</title>
+		<title>Client notes • 📤 bgio-effects</title>
 		
 	
 
@@ -119,6 +119,10 @@
 								<a href="/bgio-effects/plugin/sequencing" aria-current="false" class="astro-HR6GW4QM">
 									Sequencing effects
 								</a>
+							</li><li class="nav-link astro-HR6GW4QM">
+								<a href="/bgio-effects/plugin/notes" aria-current="false" class="astro-HR6GW4QM">
+									Notes
+								</a>
 							</li>
 					</ul>
 				</div>
@@ -161,7 +165,7 @@
 				
 <article id="article" class="content astro-O4NKPHGZ">
 	<section class="main-section astro-O4NKPHGZ">
-		<h1 class="content-title astro-O4NKPHGZ" id="overview">Notes</h1>
+		<h1 class="content-title astro-O4NKPHGZ" id="overview">Client notes</h1>
 		<nav class="block sm:hidden astro-O4NKPHGZ" aria-label="Table of Contents">
 			<astro-root uid="ryuVr"><h2 class="heading">On this page</h2><ul><li class="header-link depth-2"><a href="#overview">Overview</a></li><li class="header-link depth-2"><a href="#initial-render">Initial render</a></li><li class="header-link depth-2"><a href="#timing-precision">Timing precision</a></li></ul></astro-root>
 		</nav>
